# 0to100

./: .env.example  .gitignore  CHANGES.md  CHANGES_ENHANCEMENTS.md  add_stop_loss.py  app.py  config.py  get_request_token.py  get_token.py  logger.py  main.py  moneycontrol_scraper.py  paper_trading.db  paper_trading.py  requirements.txt  test_render.py
.emergent/: emergent.yml  summary.txt
.streamlit/: config.toml
0to100/: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt  run.sh  run_hybrid.sh
agents/: earnings_agent.py  prompts.py  risk_agent.py  sentiment_agent.py  supervisor.py  technical_agent.py  tools.py
ai/: deepseek_dual.py  dual_llm_service.py  mem0_store.py  signal_memory.py
fintel/backend/: Dockerfile  Dockerfile.worker  pyproject.toml
fintel/backend/app/: main.py
fintel/backend/app/api/: deps.py
fintel/backend/app/api/v1/: router.py
fintel/backend/app/api/v1/endpoints/: auth.py  companies.py  health.py
fintel/backend/app/core/: config.py  events.py  exceptions.py  logging.py  middleware.py  security.py
fintel/backend/app/db/: engine.py  redis.py
fintel/backend/app/repositories/: base.py  user.py
fintel/backend/app/schemas/: auth.py  common.py  company.py
fintel/backend/app/scrapers/: base.py  bse.py  coordinator.py  nse.py  screener.py
fintel/backend/app/services/: auth.py
fintel/backend/app/utils/: http.py  retry.py
fintel/backend/app/workers/: celery_app.py
fintel/backend/app/workers/tasks/: ai_extraction.py  embeddings.py  ingestion.py  scraping.py
fintel/backend/migrations/: env.py
(+264 files in other folders)
